@@ -134,6 +134,140 @@ our %NFL_FIELDS_TXT = (
 	'al' => 0x00004064,
 );
 
+our %NFL_FIELDS_DEFAULT_AGGR = (
+	0x00000164 => 0x01,
+	0x00000264 => 0x02,
+	0x00000364 => 0x02,
+	0x00000464 => 0x03,
+	0x00000564 => 0x03,
+	0x00000664 => 0x03,
+	0x00000764 => 0x03,
+	0x00000864 => 0x03,
+	0x00000916 => 0x00,
+	0x00000a16 => 0x00,
+	0x00000b08 => 0x04,
+	0x00000ca1 => 0x00,
+	0x00000da1 => 0x00,
+	0x00000ea1 => 0x00,
+	0x00000f08 => 0x00,
+	0x00001008 => 0x00,
+	0x00001108 => 0x00,
+	0x00001208 => 0x00,
+	0x00001332 => 0x00,
+	0x00001432 => 0x00,
+	0x00001532 => 0x00,
+	0x00001632 => 0x00,
+	0x000017a1 => 0x00,
+	0x00001808 => 0x00,
+	0x00001916 => 0x00,
+	0x00001a16 => 0x00,
+	0x00001ba2 => 0x00,
+	0x00001ca2 => 0x00,
+	0x00001da2 => 0x00,
+	0x00001ea2 => 0x00,
+	0x00001fab => 0x00,
+	0x00002016 => 0x00,
+	0x00002116 => 0x00,
+	0x00002208 => 0x00,
+	0x00002308 => 0x00,
+	0x000024a1 => 0x00,
+	0x00002508 => 0x00,
+	0x00002608 => 0x00,
+	0x00002764 => 0x01,
+	0x00002832 => 0x00,
+	0x00002908 => 0x00,
+	0x00002a08 => 0x00,
+	0x00002b16 => 0x00,
+	0x00002ca1 => 0x00,
+	0x00002da1 => 0x00,
+	0x00002e16 => 0x00,
+	0x00002f16 => 0x00,
+	0x00003032 => 0x00,
+	0x00003132 => 0x00,
+	0x00003232 => 0x00,
+	0x00003332 => 0x00,
+	0x00003432 => 0x00,
+	0x00003532 => 0x00,
+	0x000036aa => 0x00,
+	0x00003732 => 0x00,
+	0x00003808 => 0x00,
+	0x00003932 => 0x00,
+	0x00003a16 => 0x00,
+	0x00003b16 => 0x00,
+	0x00003c16 => 0x00,
+	0x00003d16 => 0x00,
+	0x00003e64 => 0x00,
+	0x00003f64 => 0x00,
+	0x00004064 => 0x00,
+);
+
+our %NFL_FIELDS_DEFAULT_SORT = (
+	0x00000164 => 0x10,
+	0x00000264 => 0x10,
+	0x00000364 => 0x10,
+	0x00000464 => 0x20,
+	0x00000564 => 0x20,
+	0x00000664 => 0x20,
+	0x00000764 => 0x20,
+	0x00000864 => 0x20,
+	0x00000916 => 0x10,
+	0x00000a16 => 0x10,
+	0x00000b08 => 0x10,
+	0x00000ca1 => 0x10,
+	0x00000da1 => 0x10,
+	0x00000ea1 => 0x10,
+	0x00000f08 => 0x10,
+	0x00001008 => 0x10,
+	0x00001108 => 0x10,
+	0x00001208 => 0x10,
+	0x00001332 => 0x10,
+	0x00001432 => 0x10,
+	0x00001532 => 0x10,
+	0x00001632 => 0x10,
+	0x000017a1 => 0x10,
+	0x00001808 => 0x10,
+	0x00001916 => 0x10,
+	0x00001a16 => 0x10,
+	0x00001ba2 => 0x10,
+	0x00001ca2 => 0x10,
+	0x00001da2 => 0x10,
+	0x00001ea2 => 0x10,
+	0x00001fab => 0x00,
+	0x00002016 => 0x10,
+	0x00002116 => 0x10,
+	0x00002208 => 0x10,
+	0x00002308 => 0x10,
+	0x000024a1 => 0x10,
+	0x00002508 => 0x10,
+	0x00002608 => 0x10,
+	0x00002764 => 0x10,
+	0x00002832 => 0x10,
+	0x00002908 => 0x10,
+	0x00002a08 => 0x10,
+	0x00002b16 => 0x10,
+	0x00002ca1 => 0x10,
+	0x00002da1 => 0x10,
+	0x00002e16 => 0x10,
+	0x00002f16 => 0x10,
+	0x00003032 => 0x10,
+	0x00003132 => 0x10,
+	0x00003232 => 0x10,
+	0x00003332 => 0x10,
+	0x00003432 => 0x10,
+	0x00003532 => 0x10,
+	0x000036aa => 0x10,
+	0x00003732 => 0x10,
+	0x00003808 => 0x10,
+	0x00003932 => 0x10,
+	0x00003a16 => 0x10,
+	0x00003b16 => 0x10,
+	0x00003c16 => 0x10,
+	0x00003d16 => 0x10,
+	0x00003e64 => 0x10,
+	0x00003f64 => 0x10,
+	0x00004064 => 0x10,
+);
+
 =pod
 
 =head1 LIST OF ITEMS SUPPORTED BY Net::NfDump
