@@ -8,16 +8,18 @@ my $SUFFIX = "\t\t# generated by h2fields.pl";
 
 use strict; 
 
-my (%F, %D);
+my (%F, %D, %A, %S);
 
 while (<STDIN>) {
 	# parse follwig lines
 	#0x00370008  icmptype             NSEL ICMP type value
-	if (/^\s+(0x.+?)\s+(.+?)\s+(.+)$/) {
-		my ($id, $name, $descr) = ($1, $2, $3);
+	if (/^\s+(0x.+?)\s+(0x.+?)\s+(0x.+?)\s+(.+?)\s+(.+)$/) {
+		my ($id, $default_aggr, $default_sort, $name, $descr) = ($1, $2, $3, $4, $5);
 		
 		$F{$id} = $name;
 		$D{$id} = $descr;
+		$A{$id} = $default_aggr;
+		$S{$id} = $default_sort;
 	}
 }
 
@@ -32,6 +34,18 @@ printf ");\n\n";
 printf "our %%NFL_FIELDS_TXT = (\n";
 foreach ( sort keys %F ) {
 	printf "\t\'%s\' => %s,\n", $F{$_}, $_;
+}
+printf ");\n\n";
+
+printf "our %%NFL_FIELDS_DEFAULT_AGGR = (\n";
+foreach ( sort keys %A ) {
+	printf "\t%s => %s,\n", $_, $A{$_};
+}
+printf ");\n\n";
+
+printf "our %%NFL_FIELDS_DEFAULT_SORT = (\n";
+foreach ( sort keys %S ) {
+	printf "\t%s => %s,\n", $_, $S{$_};
 }
 printf ");\n\n";
 
